:green_heart: chore : updated workflows